tests/e2e/keywords/or_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    or = 1
      ^^

E0020: `or` is a reserved keyword
